RESOLVED FIXED146166
Selection services cannot be invoked when force click is enabled
https://bugs.webkit.org/show_bug.cgi?id=146166
Summary Selection services cannot be invoked when force click is enabled
Tim Horton
Reported 2015-06-19 15:13:22 PDT
Selection services cannot be invoked when force click is enabled
Attachments
Patch (15.67 KB, patch)
2015-06-19 15:13 PDT, Tim Horton
darin: review+
Tim Horton
Comment 1 2015-06-19 15:13:41 PDT
Darin Adler
Comment 2 2015-06-19 16:25:22 PDT
Comment on attachment 255233 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=255233&action=review > Source/WebCore/page/mac/ServicesOverlayController.h:72 > + TelephoneNumberType = 1 << 1, > + SelectionType = 1 << 2, Why skip 1 << 0? > Source/WebCore/page/mac/ServicesOverlayController.h:74 > + typedef uint32_t Type; Hmm, 32 bits to hold 2 bits. I guess that’s OK.
Tim Horton
Comment 3 2015-06-19 16:41:39 PDT
Note You need to log in before you can comment on or make changes to this bug.