Source/WebCore/page/mac/ServicesOverlayController.h
@@ -67,10 +67,11 @@ private:
         Range* range() const { return m_range.get(); }
         GraphicsLayer* layer() const { return m_graphicsLayer.get(); }
 
-        enum class Type {
-            TelephoneNumber,
-            Selection
+        enum {
+            TelephoneNumberType = 1 << 0,
+            SelectionType = 1 << 1,
         };
+        typedef uint8_t Type;
         Type type() const { return m_type; }
 
         void fadeIn();
@@ -108,11 +109,13 @@ private:
 
     void drawHighlight(Highlight&, GraphicsContext&);
 
+    void invalidateHighlightsOfType(Highlight::Type);
+    void buildPotentialHighlightsIfNeeded();
+
     void replaceHighlightsOfTypePreservingEquivalentHighlights(HashSet<RefPtr<Highlight>>&, Highlight::Type);
     void removeAllPotentialHighlightsOfType(Highlight::Type);
     void buildPhoneNumberHighlights();
     void buildSelectionHighlight();
-    void didRebuildPotentialHighlights();
 
     void determineActiveHighlight(bool& mouseIsOverButton);
     void clearActiveHighlight();
@@ -137,7 +140,7 @@ private:
     MainFrame& mainFrame() const { return m_mainFrame; }
 
     MainFrame& m_mainFrame;
-    PageOverlay* m_servicesOverlay;
+    PageOverlay* m_servicesOverlay { nullptr };
 
     RefPtr<Highlight> m_activeHighlight;
     RefPtr<Highlight> m_nextActiveHighlight;
@@ -148,7 +151,9 @@ private:
 
     // FIXME: These should move onto Highlight.
     Vector<LayoutRect> m_currentSelectionRects;
-    bool m_isTextOnly;
+    bool m_isTextOnly { false };
+
+    Highlight::Type m_dirtyHighlightTypes { 0 };
 
     std::chrono::steady_clock::time_point m_lastSelectionChangeTime;
     std::chrono::steady_clock::time_point m_nextActiveHighlightChangeTime;
@@ -158,6 +163,7 @@ private:
     IntPoint m_mousePosition;
 
     Timer m_determineActiveHighlightTimer;
+    Timer m_buildHighlightsTimer;
 };
 
 } // namespace WebKit
